Fix extra spaces and fonts. Adjust configurations in tailwind.css file

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -56,9 +56,9 @@ html{
   h6 {
     @apply text-[16px] leading-[46px] tracking-wider font-normal font-Chakra;
   }
-  p {
+  /* p {
     @apply text-[16px] leading-[46px] tracking-wider font-normal font-Chakra;
-  }
+  } */
 
   #gabyb p {
     @apply text-[16px] leading-loose tracking-wider font-normal font-Chakra;
@@ -69,11 +69,14 @@ html{
 
 
   #dues li span {
-    @apply text-[13px] leading-[27px] tracking-wider font-normal font-Inter text-[#9B9B9B];
+    @apply text-[16px] leading-[27px] tracking-wider font-normal font-Inter text-[#9B9B9B];
   }
 
   #dues p {
     @apply text-[13px] leading-[27px] tracking-wider font-normal font-Inter;
+  }
+  #dues div span p {
+    @apply text-[16px] leading-[27px] tracking-wider font-normal font-Inter;
   }
 
   #dues li {
@@ -81,7 +84,7 @@ html{
   }
 
   #servicesLists p{
-    @apply text-[13px] leading-loose tracking-wider font-normal font-Inter;
+    @apply text-[16px] leading-loose tracking-wider font-normal font-Inter;
 
   }
 
@@ -89,9 +92,6 @@ html{
     @apply text-[18px] leading-[25px] tracking-wider font-light font-BricolageGrotesque;
   }
 
-  li {
-    @apply text-[13px] leading-[27px] tracking-wider font-normal font-Chakra;
-  }
   #faqq{
     @apply text-[15px] leading-[27px] tracking-wider font-normal text-left font-BricolageGrotesque;
   }
